<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/homeBtn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <com.mikepenz.iconics.view.IconicsImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/homeImageView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:iiv_color="@android:color/white"
            app:iiv_icon="gmd-home" />
        <!--<ImageView
            android:id="@+id/homeImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:src="@drawable/btn_home_selector"/>-->
        <TextView
            android:id="@+id/homeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:text="@string/home"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/searchBtn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <com.mikepenz.iconics.view.IconicsImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/searchImageView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:iiv_color="@android:color/white"
            app:iiv_icon="@string/faw_search" />
        <!--<ImageView
            android:id="@+id/searchImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:src="@drawable/btn_search_selector"/>-->
        <TextView
            android:id="@+id/searchTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:text="@string/search"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/eventBtn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <com.mikepenz.iconics.view.IconicsImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/eventImageView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:iiv_color="@android:color/white"
            app:iiv_icon="gmd-event" />
        <!--<ImageView
            android:id="@+id/eventImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:src="@drawable/btn_home_selector"/>-->
        <TextView
            android:id="@+id/eventTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="2dp"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:text="@string/event"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/reservationDetailsBtn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <com.mikepenz.iconics.view.IconicsImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/reservationImageView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:iiv_color="@android:color/white"
            app:iiv_icon="@string/faw_calendar_check_o" />
        <!--<ImageView
            android:id="@+id/reservationImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:src="@drawable/btn_reservation_selector"/>-->
        <TextView
            android:id="@+id/reservationDetailsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:text="@string/reservation_details"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/settingsBtn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <com.mikepenz.iconics.view.IconicsImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/settingImageView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:iiv_color="@android:color/white"
            app:iiv_icon="gmd-settings" />
        <!--<ImageView
            android:id="@+id/settingImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:src="@drawable/btn_setting_selector"/>-->
        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:text="@string/settings"/>
    </LinearLayout>
</LinearLayout>
