<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_back_gradient">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="58dp"
        android:paddingRight="58dp"
        android:paddingBottom="23dp">



        <TextView
            android:textColor="@color/white"
            android:textSize="16dp"
            android:text="로그인 정보를 저장합니다"
            android:id="@+id/iv_intro_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/iv_intro_logo"
            android:layout_marginTop="13dp"
            android:background="@color/line_color_list_divider" />

        <TextView
            android:id="@+id/tv_intro_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_intro_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/group_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_intro_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_intro_id" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin">

                    <EditText
                        android:id="@+id/et_login_id"
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:background="@null"
                        android:hint="@string/login_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/text_color_light"
                        android:textSize="14dp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/line_color_list_divider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_intro_pass" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin">

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/edittext_margin"
                        android:background="@null"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/text_color_light"
                        android:textSize="14dp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/line_color_list_divider" />

            <Button
                android:id="@+id/btn_login"
                style="@style/BtnLoginText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_intro_login"
                android:text="정보저장" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_auto_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@string/auto_login"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/auto_login_size" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>